--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@casl/ability": "6.3.3",
     "@casl/react": "3.1.0",
     "@emotion/cache": "11.10.5",
-    "@emotion/react": "11.10.6",
+    "@emotion/react": "^11.10.6",
     "@emotion/server": "11.10.0",
-    "@emotion/styled": "11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fullcalendar/bootstrap5": "6.1.4",
     "@fullcalendar/common": "5.11.4",
     "@fullcalendar/core": "6.1.4",
@@ -31,11 +31,12 @@
     "@hookform/resolvers": "2.9.11",
     "@iconify/react": "4.1.0",
     "@mui/lab": "5.0.0-alpha.123",
-    "@mui/material": "5.11.13",
+    "@mui/material": "^5.11.13",
     "@mui/system": "5.11.13",
     "@mui/x-data-grid": "6.0.1",
     "@popperjs/core": "2.11.6",
     "@reduxjs/toolkit": "1.9.3",
+    "antd": "^5.11.1",
     "apexcharts-clevision": "3.28.5",
     "axios": "1.3.4",
     "axios-mock-adapter": "1.21.2",
@@ -47,6 +48,7 @@
     "clsx": "1.2.1",
     "date-fns": "2.29.3",
     "draft-js": "0.11.7",
+    "firebase": "^10.6.0",
     "i18next": "22.4.11",
     "i18next-browser-languagedetector": "7.0.1",
     "i18next-http-backend": "2.2.0",
@@ -73,7 +75,7 @@
     "recharts": "2.4.3",
     "stylis": "4.1.3",
     "stylis-plugin-rtl": "2.1.1",
-    "yup": "1.0.2"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@iconify/iconify": "3.1.0",
